--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
+    "vue-stomp": "^0.0.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
