--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "socket.io-client": "^2.3.0",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
+    "vue-bus": "^1.2.1",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
     "vue-stomp": "^0.0.5",
