--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.3.2",
     "countup": "^1.8.2",
     "echarts": "^4.4.0",
+    "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
