--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.3.2",
     "countup": "^1.8.2",
     "echarts": "^4.4.0",
@@ -21,6 +22,7 @@
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mousetrap": "^1.6.3",
     "socket.io-client": "^2.3.0",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
@@ -36,6 +38,8 @@
     "@vue/cli-plugin-vuex": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "electron": "^6.0.0",
+    "file-loader": "^5.0.2",
+    "url-loader": "^3.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.1",
     "vue-template-compiler": "^2.6.10"
   },
