--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.3.2",
     "countup": "^1.8.2",
     "echarts": "^4.4.0",
+    "electron-asar-hot-updater": "^0.1.2",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
