--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
     "vue-stomp": "^0.0.5",
+    "vue-waterfall-plugin": "^1.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
