--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mf-edu-teacher",
   "author": "mf",
-  "version": "v0.1.0",
+  "version": "v0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -30,6 +30,7 @@
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-bus": "^1.2.1",
+    "vue-concise-slider": "^3.4.4",
     "vue-cropper": "^0.4.9",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
