--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@vue/cli-service": "^4.0.0",
     "electron": "^6.0.0",
     "file-loader": "^5.0.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "url-loader": "^3.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.1",
     "vue-template-compiler": "^2.6.10"
