--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-bus": "^1.2.1",
     "vue-concise-slider": "^3.4.4",
     "vue-cropper": "^0.4.9",
+    "vue-pdf": "^4.0.8",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
     "vue-stomp": "^0.0.5",
